syntax = "proto3";

package model;
import "google/protobuf/Empty.proto";

message Queue{
  string id = 1;
  int64 time = 4;
}

message Parkir{
  string id = 1;
  string tipe = 2;
  string plat = 3;
}

message Result{
  int32 status = 1;
  string message = 2;
  string second = 3;
  string total = 4;
}

message QueueList{
  repeated Queue QList = 1;
}

service ParkirService{
  rpc GetID(google.protobuf.Empty) returns (Queue) {}
  rpc GetList(google.protobuf.Empty) returns (QueueList) {}
  rpc Exit(Parkir) returns (Result) {}
}
